[gd_scene load_steps=5 format=3 uid="uid://bovn57uo7n0st"]

[ext_resource type="Texture2D" uid="uid://cg34xy48y0nx3" path="res://Sprites/base_floor_grass.png" id="1_ed0ip"]
[ext_resource type="Script" path="res://Scripts/score_card.gd" id="1_sc441"]
[ext_resource type="Theme" uid="uid://t73g016048ng" path="res://font_placeholder.tres" id="2_5o3ns"]

[sub_resource type="LabelSettings" id="LabelSettings_yggph"]
font_size = 20

[node name="Score Card" type="Control"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 3
anchors_preset = 0
offset_right = 488.0
offset_bottom = 32.0
script = ExtResource("1_sc441")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ed0ip")
stretch_mode = 1

[node name="Leaderboard_Time" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -13.5
offset_right = -6.0
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_5o3ns")
text = "Time_Value"
label_settings = SubResource("LabelSettings_yggph")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -22.5
offset_right = 53.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="Leaderboard_Score" type="Label" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 21)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 21.0
grow_horizontal = 2
theme = ExtResource("2_5o3ns")
text = "Score_Value"
label_settings = SubResource("LabelSettings_yggph")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Leaderboard_Kills" type="Label" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -21.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_5o3ns")
text = "Kill_Value"
label_settings = SubResource("LabelSettings_yggph")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Leaderboard_Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 8.0
offset_right = 124.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5o3ns")
text = "User_Name"
label_settings = SubResource("LabelSettings_yggph")
autowrap_mode = 1
clip_text = true

[node name="Leaderboard_Level" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -21.0
offset_right = 123.0
grow_vertical = 0
theme = ExtResource("2_5o3ns")
text = "Level"
label_settings = SubResource("LabelSettings_yggph")
vertical_alignment = 1
clip_text = true
